--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <h1 id="sandy-s-portfolio">Sandy&#39;s Portfolio</h1>
+<link charset="utf-8" href="css/normalize.css"
+media="screen"
+rel="stylesheet"
+>
+    <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
     <h2 id="home">Home</h2>
     <p>Hey! I’m Sandy, a junior graphic &amp; UI/UX designer 
     <br/>Transforming imagination to design, one graphic at a time</p>
