--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<link charset="utf-8" href="css/normalize.css"
+<link charset="utf-8" href="css/style.css"
 media="screen"
-rel="stylesheet"
->
-    <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
-    <h2 id="home">Home</h2>
-    <p>Hey! I’m Sandy, a junior graphic &amp; UI/UX designer 
+rel="stylesheet">
+<div class="nav"><a href="/" class="brand w-nav-brand" aria-label="home"><img src="/sanbeeps-smaller.png" style="width: 90px; loading="lazy" alt="" class="logo"></a></div>
+ <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
+   </script><p>Hey! I&#39;m Sandy, a junior graphic &amp; UI/UX designer 
     <br/>Transforming imagination to design, one graphic at a time</p>
     <ul>
     <li>Onboarding Flow (Craigslist App and Website Redesign) - Redesigning their system for better navigation and flow <ul>
@@ -23,4 +22,4 @@ rel="stylesheet"
     </li>
     <li>Coming Soon</li>
     </ul>
-    
+    <footer> &copy; Sandy Chen </footer>
