--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link charset="utf-8" href="style.css"
 media="screen"
 rel="stylesheet">
-<div class="nav"><a href="/" class="brand w-nav-brand" aria-label="home"><img src="/Images/sanbeeps-smaller.png" style="width: 90px; loading="lazy" alt="" class="logo"></a></div>
+<div class="nav"><a href="/" class="brand w-nav-brand" aria-label="home"><img src="/Images/sanbeeps-smaller.png" style="width: 90px; loading:'lazy" alt= ""class="logo"></a></div>
  <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
    </script><p>Hey! I&#39;m Sandy, a junior graphic &amp; UI/UX designer 
     <br/>Transforming imagination to design, one graphic at a time</p>
