--- a/about.html
+++ b/about.html
@@ -1,13 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<link charset="utf-8" href="screen.css"
+media="screen"
+rel="stylesheet">
+<p><a href="index.html">Home</a></p>
+<p><a href="about.html">About</a></p>
+
 <h2 id="about">About</h2>
+<img src="/media/self.jpg" alt="salt" width="360" height="360">
+
     <p>Hello! I’m Sandy, a junior graphic designer based in Philadelphia</p>
     <p>I’m a junior at Drexel University pursuing a major in Graphic Design and a minor in User Experience and Interaction and Fine Arts. </p>
     <p>My goal is to inspire positive change in people&#39;s lives through innovative and compassion-driven designs.</p>
     <p>Graphic design is almost always somewhere around us, it struck me to how life-changing and important design truly is! As someone who was always taught and interested in traditional art, graphics was cool because it combined both traditional art and the growing digital world. Being able to allow artists to story-tell and convey strong messages through visual and mental aspects, I felt a sense of comfort and balance in this space.</p>
-    <p>Let’s be friends! I would be thrilled to design your next project!</p>
-    <ul>
-    <li>Your Name</li>
-    <li>Your Email</li>
-    <li>Message</li>
     </ul>
     <p><a href="https://www.instagram.com/sndyf1sh/">Instagram</a>
     <br/>
@@ -35,25 +40,6 @@
     <li>User Interface Design I &amp; II</li>
     <li>Foundations of Business</li>
     </ul>
-    <h3 id="activities-organizations">Activities/Organizations</h3>
-    <p><strong>Drexel Art Organization (DART) Member</strong>
-    <br/>2022 - PRESENT</p>
-    <p><strong>AAU Asian Americans United</strong>
-    <br/>2021 - PRESENT</p>
-    <p><strong>High School Student Council Designer</strong>
-    <br/>2020 -  2022</p>
-    <p><strong>American Sign Language Club Member</strong>
-    <br/>2021 - 2022</p>
-    <p><strong>Northeast Philadelphia Chinese 
-    Association (NEPCA) of Culture Trust</strong>
-    <br/>2018 - 2019</p>
-    <h3 id="awards">Awards</h3>
-    <p><strong>Dean’s List</strong> | 2022 - PRESENT
-    <br/><strong>Westphal Portfolio Scholarship</strong> 2022 - PRESENT
-    <br/><strong>Brown Scholarship</strong> | 2022 - PRESENT
-    <br/><strong>Dena R. White Scholarship for Creative Writing</strong> | 2021 - 2022
-    <br/><strong>Chinese Culture &amp; Arts Center Awards</strong> 
-    2015 - 2019</p>
     <h3 id="experience">Experience</h3>
     <p><strong>Jollibee</strong> | Philadelphia, PA
     Crew Member (MAR 2024 - PRESENT)</p>
