--- a/craigslist.html
+++ b/craigslist.html
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<link charset="utf-8" href="style.css"
+media="screen"
+rel="stylesheet">
+<p><a href="index.html">Home</a></p>
+<p><a href="about.html">About</a></p>
 <h2 id="craigslist">Craigslist</h2>
+<img src="/media/craigs_cover.jpg" alt="salt" width="360" height="250">
 <p><strong>Onboarding Flow</strong></p>
 <p>Enhancing navigation features for Craigslist’s online site and mobile app
 <br/>
@@ -45,7 +53,13 @@
 <li>Changes?: If I was given more time on this project, I would have liked to explore add more content in all of my sections. I also would’ve liked to experiment more with prototyping and if possible, I would’ve add two more screens, one screen that actually covers all the sections on Craigslist’s original site and the second screen, a location screen so that users can know that their sellers aren’t scammers.</li>
 <li>All in all, I believe this project really helped me learn about the research involved in User Experience (UX). It underscored the importance of user-centered design and provided me with practical skills in Figma and prototyping that I can apply to future projects. The hands-on experience in balancing usability with visual elements has been invaluable, making me into a more thoughtful and effective designer.</li>
 </ul>
-<h2 id="persephone-books">Persephone Books</h2>
-<p><strong>Persephone Books — Graphic Design</strong></p>
-<p>Redesigning the logo and rebranding for Persephone Books; creating a responsive website, tablet, and mobile design based on the redesigns
-<br/>
+<img src="/media/craigs_laptop.png" alt="salt" width="360" height="250">
+<img src="/media/craigs_phone.png" alt="salt" width="360" height="250">
+<img src="/media/1.png" alt="salt" width="360" height="250">
+<img src="/media/2.png" alt="salt" width="360" height="250">
+<img src="/media/3.png" alt="salt" width="360" height="250">
+<img src="/media/4.png" alt="salt" width="360" height="250">
+<img src="/media/5.png" alt="salt" width="360" height="250">
+
+<h3><a href="salt.html">Previous: Coffee Editorial</a></h3>
+<h3><a href="environmental.html">Next: Environmental Editorial</a></h3>
