--- a/environmental.html
+++ b/environmental.html
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<link charset="utf-8" href="style.css"
+media="screen"
+rel="stylesheet">
+<p><a href="index.html">Home</a></p>
+<p><a href="about.html">About</a></p>
 <h2 id="environmental-type">Environmental Type</h2>
+<img src="/media/environmental_cover.jpg" alt="salt" width="360" height="250">
 <p><strong>Ocean Pollution &amp; Marine Debris</strong></p>
 <p>Designing a booklet that explores the organization and system of typography in multiple publication formats.
 <br/>
@@ -21,5 +29,5 @@
 <li>All-in-all, I am satisfied with the end booklet. Advocating for climate change issues to me is a side passion that I am always eager to learn or talk about. Thus, in a sense this project allowed me to learn more about its issues, how to project them to viewers, and how it could and should be applied to my study.</li>
 </ul>
 
-<h2 id="coming-soon">Coming Soon</h2>
-<p><strong>Branding Project Coming Soon</strong></p>
+<h3><a href="craigslist.html">Previous: Craigslist</a></h3>
+<h3><a href="ikea.html">Next: IKEA</a></h3>
