--- a/ikea.html
+++ b/ikea.html
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<link charset="utf-8" href="style.css"
+media="screen"
+rel="stylesheet">
+<p><a href="index.html">Home</a></p>
+<p><a href="about.html">About</a></p>
 <h2 id="ikea">IKEA</h2>
+<img src="/media/ikea_cover.png" alt="salt" width="360" height="250">
     <p><strong>UX Redesign</strong></p>
     <p>Strengthen navigation features and checkout system for IKEA’s mobile app
     <br/>
@@ -25,3 +33,6 @@
     <li>All-in-all, this project has taught me many things like smoothen my design process and making me feel more confident with the advanced features of Figma. Other than this, I also had the chance to explore Figma&#39;s animation capabilities, which added an engaging, dynamic element to the project. Overall, this redesign project helped me realize the importance of balancing creativity with structured design processes, ensuring that every detail—whether visual or functional—aligns with user-centered principles. </li>
     </ul><br>
     <div style="padding:79.94% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1024465570?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="IKEA Mobile Redesign Study"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+<h3><a href="environmental.html">Previous: Environmental Editorial</a></h3>
+<h3><a href="persephone.html">Next: Persephone Books</a></h3>
