--- a/index.html
+++ b/index.html
@@ -3,23 +3,31 @@
 <link charset="utf-8" href="style.css"
 media="screen"
 rel="stylesheet">
-<div class="nav"><a href="/" class="brand w-nav-brand" aria-label="home"><img src="/Images/sanbeeps-smaller.png" style="width: 90px; loading:'lazy" alt= ""class="logo"></a></div>
+
+<p><a href="index.html">Home</a></p>
+<p><a href="about.html">About</a></p>
+
  <h1 id="sandy's-portfolio">Sandy&#39;s Portfolio</h1>
-   </script><p>Hey! I&#39;m Sandy, a junior graphic &amp; UI/UX designer 
+ <p>Hey! I&#39;m Sandy, a junior graphic &amp; UI/UX designer 
     <br/>Transforming imagination to design, one graphic at a time</p>
-    <ul>
-    <li>Onboarding Flow (Craigslist App and Website Redesign) - Redesigning their system for better navigation and flow <ul>
-    <li>Figma, Canva, Optimal Workshop</li>
-    </ul>
-    </li>
-    <li>Brand &amp; Web Redesign (Persephone Books) - Redesigning their logo and brand; redesigning their website <ul>
-    <li>Illustrator, Photoshop, Figma</li>
-    </ul>
-    </li>
-    <li>Coffee Editorial<ul>
-    <li>Indesign, Photoshop, Illustrator</li>
-    </ul>
-    </li>
-    <li>Coming Soon</li>
-    </ul>
-    <footer> &copy; Sandy Chen </footer>
+
+<h3><a href="craigslist.html">Flow (Craigslist App and Website Redesign)</a></h3>
+    <p>Redesigning their system for better navigation and flow
+    <br>Figma, Canva, Optimal Workshop</br></p>
+    <img src="/media/craigs_cover.jpg" alt="salt" width="360" height="250">
+
+    <h3><a href="persephone.html">Brand &amp; Web Redesign (Persephone Books)</a></h3>
+    <p>Redesigning their logo and brand; redesigning their website
+    <br>Illustrator, Photoshop, Figma</br></p>
+    <img src="/media/pb_cover.jpg" alt="salt" width="360" height="250">
+  
+    <h3><a href="salt.html">Coffee Editorial</a></h3>
+    <p>Indesign, Photoshop, Illustrator</p>
+    <img src="/media/coffee_mockup.jpg" alt="salt" width="360" height="250">
+
+    <h3>Coming Soon</h3>
+    <img src="/media/wilma_cover.jpg" alt="wilma" width="360" height="250">
+    
+  <footer>
+    <p>© 2024 Sandy Chen</p>
+  </footer>
