--- a/persephone.html
+++ b/persephone.html
@@ -1,4 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<link charset="utf-8" href="style.css"
+media="screen"
+rel="stylesheet">
+<p><a href="index.html">Home</a></p>
+<p><a href="about.html">About</a></p>
 <h2 id="persephone-books">Persephone Books</h2>
+<img src="/media/pb_cover.jpg" alt="salt" width="360" height="250">
+
 <p><strong>Persephone Books — Graphic Design</strong></p>
 <p>Redesigning the logo and rebranding for Persephone Books; creating a responsive website, tablet, and mobile design based on the redesigns
 <br/>
@@ -21,3 +30,10 @@
 <li>Changes?: If I was given another chance to redesign this project, I think I would want to experiment more with making a site and app that sticks to Persephone Book’s original concept and style. I think that on their original site, they do have a really nice vintage vibe to it, and I would love to experiment with that style if given another chance. </li>
 <li>Overall, I really like how my final redesign turned out. I feel like I learned a lot through this project and the rebranding and redesigning of this company is something I really enjoyed this quarter. I feel that while I did change many things about about Persephone Books’ brand, it was through this that I was able to step out of the box more and experiment with different features and looks for a app and site design. I believe that my redesign does look a lot more organized and less cluttered, and while it’s not perfect and there could be more smaller details added, for now, I am enjoying what I have.</li>
 </ul>
+<img src="/media/pb_process.png" alt="salt" width="360" height="250">
+<img src="/media/pb_book.png" alt="salt" width="360" height="250">
+<img src="/media/pb_bag.png" alt="salt" width="360" height="250">
+<img src="/media/pb_stationary.png" alt="salt" width="360" height="250">
+
+<h3><a href="ikea.html">Previous: IKEA</a></h3>
+<h3><a href="salt.html">Next: Coffee Editorial</a></h3>
