--- a/salt.html
+++ b/salt.html
@@ -1,4 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<link charset="utf-8" href="style.css"
+media="screen"
+rel="stylesheet">
+<p><a href="index.html">Home</a></p>
+<p><a href="about.html">About</a></p>
 <h2 id="salt-editorial">SALT Editorial</h2>
+<img src="/media/coffee_mockup.jpg" alt="salt" width="360" height="250">
+
 <p><strong>The Health Benefits of Coffee</strong></p>
 <p>Designing editorial spreads for a magazine through content development, masthead and cover development and refinement. 
 <br/>
@@ -21,3 +30,5 @@
 <li>Overall, I believe I learned a great deal through this project. On top of this, I am greatly satisfied with the end result of my publication and how it turned out. I believe that while not without flaws, I was able to achieve the goals I had set for myself in the beginning of this project and class. </li>
 </ul>
 
+<h3><a href="persephone.html">Previous: Persephone Books</a></h3>
+<h3><a href="craigslist.html">Next: Craigslist</a></h3>
