--- a/persephone.html
+++ b/persephone.html
@@ -8,27 +8,24 @@ rel="stylesheet">
 <h2 id="persephone-books">Persephone Books</h2>
 <img src="/media/pb_cover.jpg" alt="salt" width="360" height="250">
 
-<p><strong>Persephone Books — Graphic Design</strong></p>
+<h3><strong>Persephone Books — Graphic Design</strong></h3>
 <p>Redesigning the logo and rebranding for Persephone Books; creating a responsive website, tablet, and mobile design based on the redesigns
 <br/>
 <br/>Role: Junior Graphic Designer
 <br/>Timeline: 10 weeks
 <br/>Tools: Figma, Illustrator, Photoshop</p>
 <p>Overview: Persephone Books is a UK-based publishing house and bookstore that reprints neglected fiction and non-fiction, mostly by women writers and mostly dating from the mid-twentieth century. The founder of Persephone Books, Nicola Beauman started their journey in 1999.</p>
-<p><strong>The Problem:</strong></p>
-<ul>
-<li><strong>Graphic Design Aspect:</strong> Persephone Books’ original logo is very simple — it’s a simple image of Persephone — but it didn’t seem like a logo that could be seen as their mark. </li>
-<li><strong>UI/UX Aspect:</strong> While what they have functioned properly, I wanted to redesign the Persephone Books experience to fit in visually with modern design. Regarding Persephone Books’ current website, my problem with their site is that the contents are cluttered and repetitive, which can contribute to a potentially overwhelming experience for users. Additionally, in both their website and mobile versions, their information hierarchy is really messy, so I wanted to clear that up a bit so that users can have an easier time navigating both platforms. </li>
-</ul>
-<p><strong>My Goal:</strong></p>
-<ul>
-<li>My goal when redesigning their logo and brand identity was to create something simple and mark-like. The reference and limit I set myself too was to make a logo that I could see on a book spine. At first, I wanted to work with combining Persephone and books — a literal meaning of their house name — but later decided to keep it to just Persephone, somewhat like their original logo. My primary goal when redesigning their website was to enhance the visual design of the app, reduce some of its clutter, and reorganize the information hierarchy. My aim was to enhance the placement of content to establish a user-friendly environment, ensuring effortless navigation for app and site users. To achieve this, I focused on removing some of their repetitive contents and categories, and instead grouping them into broader sectors. The updated layout intends to simplify information delivery, enhancing user experience by keeping a visually pleasing display. By refining the app and site’s visual hierarchy and content structure, I am confident that the proposed redesign can greatly enhance overall user satisfaction.</li>
-</ul>
-<p><strong>Reflections:</strong> </p>
-<ul>
-<li>What I Learned: Through this project, I was able to get a better understanding of the concepts of auto-layout, components, and responsive vs. unresponsive screens. This project also allowed me to use and know more about style guides, variables, and how they can make redesigning a project much more easier. </li>
-<li>Changes?: If I was given another chance to redesign this project, I think I would want to experiment more with making a site and app that sticks to Persephone Book’s original concept and style. I think that on their original site, they do have a really nice vintage vibe to it, and I would love to experiment with that style if given another chance. </li>
-<li>Overall, I really like how my final redesign turned out. I feel like I learned a lot through this project and the rebranding and redesigning of this company is something I really enjoyed this quarter. I feel that while I did change many things about about Persephone Books’ brand, it was through this that I was able to step out of the box more and experiment with different features and looks for a app and site design. I believe that my redesign does look a lot more organized and less cluttered, and while it’s not perfect and there could be more smaller details added, for now, I am enjoying what I have.</li>
+<h3><strong>The Problem:</strong></h3>
+
+<strong>Graphic Design Aspect:</strong> Persephone Books’ original logo is very simple — it’s a simple image of Persephone — but it didn’t seem like a logo that could be seen as their mark.
+<br><strong>UI/UX Aspect:</strong> While what they have functioned properly, I wanted to redesign the Persephone Books experience to fit in visually with modern design. Regarding Persephone Books’ current website, my problem with their site is that the contents are cluttered and repetitive, which can contribute to a potentially overwhelming experience for users. Additionally, in both their website and mobile versions, their information hierarchy is really messy, so I wanted to clear that up a bit so that users can have an easier time navigating both platforms.
+
+<h3><strong>My Goal:</strong></h3>
+My goal when redesigning their logo and brand identity was to create something simple and mark-like. The reference and limit I set myself too was to make a logo that I could see on a book spine. At first, I wanted to work with combining Persephone and books — a literal meaning of their house name — but later decided to keep it to just Persephone, somewhat like their original logo. My primary goal when redesigning their website was to enhance the visual design of the app, reduce some of its clutter, and reorganize the information hierarchy. My aim was to enhance the placement of content to establish a user-friendly environment, ensuring effortless navigation for app and site users. To achieve this, I focused on removing some of their repetitive contents and categories, and instead grouping them into broader sectors. The updated layout intends to simplify information delivery, enhancing user experience by keeping a visually pleasing display. By refining the app and site’s visual hierarchy and content structure, I am confident that the proposed redesign can greatly enhance overall user satisfaction.
+<h3><strong>Reflections:</strong> </h3>
+<strong>What I Learned:</strong> Through this project, I was able to get a better understanding of the concepts of auto-layout, components, and responsive vs. unresponsive screens. This project also allowed me to use and know more about style guides, variables, and how they can make redesigning a project much more easier. </li>
+<br><strong>Changes?:</strong> If I was given another chance to redesign this project, I think I would want to experiment more with making a site and app that sticks to Persephone Book’s original concept and style. I think that on their original site, they do have a really nice vintage vibe to it, and I would love to experiment with that style if given another chance. </li>
+<br>Overall, I really like how my final redesign turned out. I feel like I learned a lot through this project and the rebranding and redesigning of this company is something I really enjoyed this quarter. I feel that while I did change many things about about Persephone Books’ brand, it was through this that I was able to step out of the box more and experiment with different features and looks for a app and site design. I believe that my redesign does look a lot more organized and less cluttered, and while it’s not perfect and there could be more smaller details added, for now, I am enjoying what I have.</li>
 </ul>
 <img src="/media/pb_process.png" alt="salt" width="360" height="250">
 <img src="/media/pb_book.png" alt="salt" width="360" height="250">
