--- a/salt.html
+++ b/salt.html
@@ -8,27 +8,23 @@ rel="stylesheet">
 <h2 id="salt-editorial">SALT Editorial</h2>
 <img src="/media/coffee_mockup.jpg" alt="salt" width="360" height="250">
 
-<p><strong>The Health Benefits of Coffee</strong></p>
+<h3><strong>The Health Benefits of Coffee</strong></h3>
 <p>Designing editorial spreads for a magazine through content development, masthead and cover development and refinement. 
 <br/>
 <br/> Role: Sophmore Graphic Designer
 <br/> Timeline: 10 weeks
 <br/> Tools: InDesign, Illustrator, Photoshop</p>
 <p>Overview: With a randomized publication name and article, this project allowed us to experiment and experience the process of makingand designing a magazine editorial.</p>
-<p><strong>My Goals:</strong> </p>
-<ul>
-<li>After getting my publication name and article which both focused on the food industry, I decided to make my editorial food and wellness focused. My goal throughout this project was to learn how I could work with type and its layout on spreads. While doing this, I wanted to design an editorial that would catch viewers&#39; eyes and be a product that could easily communicate its content and make viewers&#39; want to revisit the issue/publication. </li>
-</ul>
-<p><strong>Problems I Encountered:</strong> </p>
-<ul>
-<li>The first couple weeks were rough, as I didn&#39;t really have a specific direction in which I wanted my publication to head in. Through the class, I experimented with physical collaging and basic type placements, and by week 6-7 of the class, I was getting a grasp on the path I was going in. </li>
-</ul>
-<p><strong>Reflections:</strong></p>
-<ul>
-<li>What I Learned: This project and class heavily inflenced me and taught me a lot on typographic variations and how, with the right balance, it can work well with images, elements, and with the spread itself. Other than this, I was also able to reflect on the fact that when stuck, it always helps to turn to a different medium or method. </li>
-<li>Changes?: If I could, I think I would&#39;ve liked to add more pages to my publication. I feel the article I received was a bit short and with a couple more pages, I would&#39;ve able to explore/experience more typographic variations and visual language. This and I would&#39;ve liked to try making a publication with my own media. </li>
-<li>Overall, I believe I learned a great deal through this project. On top of this, I am greatly satisfied with the end result of my publication and how it turned out. I believe that while not without flaws, I was able to achieve the goals I had set for myself in the beginning of this project and class. </li>
-</ul>
+<h3><strong>My Goals:</strong> </h3>
+After getting my publication name and article which both focused on the food industry, I decided to make my editorial food and wellness focused. My goal throughout this project was to learn how I could work with type and its layout on spreads. While doing this, I wanted to design an editorial that would catch viewers&#39; eyes and be a product that could easily communicate its content and make viewers&#39; want to revisit the issue/publication. 
+
+<h3><strong>Problems I Encountered:</strong> </h3>
+The first couple weeks were rough, as I didn&#39;t really have a specific direction in which I wanted my publication to head in. Through the class, I experimented with physical collaging and basic type placements, and by week 6-7 of the class, I was getting a grasp on the path I was going in.
+
+<h3><strong>Reflections:</strong></h3>
+<strong>What I Learned:</strong> This project and class heavily inflenced me and taught me a lot on typographic variations and how, with the right balance, it can work well with images, elements, and with the spread itself. Other than this, I was also able to reflect on the fact that when stuck, it always helps to turn to a different medium or method. </li>
+<br><strong>Changes?:</strong> If I could, I think I would&#39;ve liked to add more pages to my publication. I feel the article I received was a bit short and with a couple more pages, I would&#39;ve able to explore/experience more typographic variations and visual language. This and I would&#39;ve liked to try making a publication with my own media. </li>
+<br>Overall, I believe I learned a great deal through this project. On top of this, I am greatly satisfied with the end result of my publication and how it turned out. I believe that while not without flaws, I was able to achieve the goals I had set for myself in the beginning of this project and class. 
 
 <h3><a href="persephone.html">Previous: Persephone Books</a></h3>
 <h3><a href="craigslist.html">Next: Craigslist</a></h3>
